--- a/css/style.css
+++ b/css/style.css
@@ -189,29 +189,75 @@ nav ul li.active{
 	background-color: #fff;
 	padding: 20px;
 }
+.comments-item{
+	margin-bottom: 30px;
+}
 .comments-item > span{
 	display: inline-block;
 	float: left;
 	background-color: #5a7cac;
-	padding: 5px 7px;
+	padding: 2px 3px;
 	color: #fff;
 }
 .comments-item_body{
 	display: inline-block;
-	margin-left: 19px;
-	padding-left: 10px;
+	margin-left: 18px;
 	vertical-align: top;
 }
 .comments-item_body h2{
 	margin: 0;
 	padding: 0;
 }
-.comments-item_body a{
+.comments-item_body h2 a{
+	font-size: 13px;
+	font-weight: bold;
 	color: #000;
+	margin: 0;
+	padding: 0;
+	line-height: 1.9;
+}
+.comments-item_body > a{
+	color: #000;
+	font-size: 12px;
+	color: #676767;
 }
 .a-user_green{
-	color: #739a80;
+	color: #2b7045;
 }
+.comments-all{
+	margin-left: 56px;
+}
+.comments-all > a{
+	color: #346848;
+	font-weight: bold;
+	font-size: 13px;
+}
+.webki{
+	background-color: #fff;
+	padding: 0 29px 29px 29px;
+}
+.webki-head{
+	background-color: #66cc00;
+	margin: 29px -29px;
+	padding: 20px 29px 10px 29px;
+}
+.webki-head h1{
+	color: #003300;
+	font-size: 16px;
+	font-weight: bold;
+	margin: 0;
+}
+.webki-body_item{
+	width: 50%;
+	
+}
+
+
+
+
+
+
+
 
 
 
