--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@ body{
 	margin: 0;
 	font-size: 13px;
   font-family: "Arial";
-  background-image: url('../img/background.png');
+  background-image: url('../img/back_2.jpg');
+}
+.hide{
+	display: none !important;
 }
 .view{
 	width: 954px;
@@ -17,14 +20,64 @@ header{
 	height: 186px;
 	background-image: url('../img/background_top.png');
 	margin-bottom: 12px;
+	position: relative;
+}
+.sitename{
+	position: absolute;
+	bottom: 22px;
+	left: 41px;
+}
+.search{
+	position: absolute;
+	width: 105px;
+	height: 24px;
+	bottom: 55px;
+	right: 12px;
+}
+.search form{
+	width: 100%;
+	height: 100%;
+}
+.search_field{
+	background-color: #055700;
+	border: none;
+	outline: none;
+	width: 100%;
+	height: 100%;
+	padding: 0 20px 0 18px; 
+	font-size: 14px;
+	color: #fff;
+}
+.search form input::-moz-placeholder{
+	font-style: italic;
+	color: #9cc761;
+	font-size: 14px;
+}
+.search form input::-webkit-input-placeholder{
+	font-style: italic;
+	color: #9cc761;
+	font-size: 14px;
+}
+.search_ico{
+	font-size: 0;
+	width: 18px;
+	height: 20px;
+	position: absolute;
+	right: 2px;
+	top: 2px;
+	background-image: url(../img/search.png);
+	background-color: unset;
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
 .header-top{
 	height: 59px;
-	line-height: 59px;
+	/*line-height: 59px;*/
 	margin-bottom: 6px;
 	display: block;
 }
-.header-top div{
+.header-top > div{
 	display: inline-block;
 	vertical-align: top;
 }
@@ -52,12 +105,120 @@ header{
 	background-color: #335f44;
 	width: 234px;
 	height: 59px;
-	text-align: center;
-	vertical-align: middle;
-	float: left;
 }
-.h-users{
-	line-height: 42px;
+.sign-sign{
+	position: absolute;
+	top: 7px;
+	left: 258px;
+}
+.sign-sign a{
+	text-decoration: none;
+}
+.sign-sign-a{
+	width: 123px;
+	
+}
+.sign-sign-a_ico{
+	background-image: url(../img/vcard.png);
+	background-position: -28px 0;
+	background-repeat: no-repeat;
+	font-size: 0;
+	width: 28px;
+	height: 21px;
+	display: block;
+}
+.sign-sign-a_text{
+	display: block;
+	padding: 8px 0 0 0;
+	color: #fff;
+}
+.sign-sign a:hover .sign-sign-a_ico{
+	background-position: 0 0;
+}
+.sign-sign a:hover .sign-sign-a_text{
+	color: #96fe17;
+	text-decoration: underline;
+}
+
+
+
+.sign-reg{
+	position: absolute;
+	top: 7px;
+	left: 382px;
+}
+.sign-reg a{
+	text-decoration: none;
+}
+.sign-reg-a{
+	width: 85px;
+	
+}
+.sign-reg-a_ico{
+	background-image: url(../img/reg.png);
+	background-position: -21px 0;
+	background-repeat: no-repeat;
+	font-size: 0;
+	width: 21px;
+	height: 22px;
+	display: block;
+}
+.sign-reg-a_text{
+	display: block;
+	padding: 8px 0 0 0;
+	color: #fff;
+}
+.sign-reg a:hover .sign-reg-a_ico{
+	background-position: 0 0;
+}
+.sign-reg a:hover .sign-reg-a_text{
+	color: #96fe17;
+	text-decoration: underline;
+}
+
+
+
+.sign-sign a:hover .arrow_down{
+	background-position: 0 0;
+}
+.arrow_down{
+	width: 13px;
+	height: 7px;
+	background-image: url(../img/arrow_down.png);
+	background-position: -13px 0;
+	font-size: 0;
+	display: inline-block;
+}
+
+.header-top-users_sign{
+	width: 123px;
+	height: 43px;
+	position: relative;
+}
+.sign{
+	width: 28px;
+	height: 21px;
+	vertical-align: bottom;
+	text-align: left;
+	background-image: url(../img/vcard.png);
+	background-position: -28px 0;
+	background-repeat: no-repeat;
+	font-size: 0;
+	margin-bottom: 8px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+}
+.sign2{
+	bottom: 0;
+	left: 0;
+	text-align: left;
+	position: absolute;
+	display: block;
+}
+.header-top-users_sign:hover div{
+	background-position: 0 0;
 }
 nav{
 	width: 960px;
@@ -87,12 +248,78 @@ nav ul li:hover,
 nav ul li.active{
 	background-color: transparent;
 }
+
+
+
+.navico{
+	position: absolute;
+	bottom: 4px;
+	right: -1px;
+}
+.navico ul{
+	list-style: none;
+}
+.navico ul li{
+	display: inline-block;
+	vertical-align: middle;
+	padding: 0 15px;
+}
+.navico_ico{
+	font-size: 0;
+	background-image: url(../img/sprite.png);
+}
+.navico_0{
+	background-position: 22px 0;
+	height: 13px;
+	width: 21px;
+}
+.navico_0:hover{
+	background-position: 0 0;
+}
+.navico_1{
+	background-position: 22px -13px;
+	height: 16px;
+	width: 15px;
+}
+.navico_1:hover{
+	background-position: 0 -13px;
+}.navico_2{
+	background-position: 22px -29px;
+	height: 18px;
+	width: 12px;
+}
+.navico_2:hover{
+	background-position: 0 -29px;
+}.navico_3{
+	background-position: 22px -47px;
+	height: 15px;
+	width: 15px;
+}
+.navico_3:hover{
+	background-position: 0 -47px;
+}.navico_4{
+	background-position: 22px -62px;
+	height: 17px;
+	width: 22px;
+}
+.navico_4:hover{
+	background-position: 0 -62px;
+}
+
+
+
+
 .times{
 	margin: 0 29px;
 }
 .times h1{
 	font-size: 16px;
 	font-weight: bold;
+	padding-top: 27px;
+}
+.times-comments h1{
+
+	padding-top: 27px;
 }
 .times-sign a{
 	color: #67a10d;
@@ -102,6 +329,9 @@ nav ul li.active{
 	line-height: 74px;
 	position: relative;
 	background-color: #fff;
+  -webkit-box-shadow:  0px 8px 27px -14px #000000;
+  -moz-box-shadow: 0px 8px 27px -14px #000000;
+  box-shadow: 0px 8px 27px -14px #000000;
 }
 .times-next-soon div{
 	display: inline-block;
@@ -132,7 +362,10 @@ nav ul li.active{
 .cat_1{
 	background-color: #d84076;
 }
-
+.cat_1 img{
+	vertical-align: middle;
+	padding: 0 11px;
+}
 .soon_text{
 	line-height: 1.1;
 	padding: 20px;
@@ -145,13 +378,24 @@ nav ul li.active{
 }
 .times-public{
 	width: 100%;
-	overflow: hidden;
 }
 .times-public-drive{
 	margin: 0 -20px;
 	max-height: 150px;
-	overflow: hidden;
-
+	position: relative;
+}
+.slider-arrow_left{
+	position: absolute;
+	left: -15px;
+	top: 57px;
+	transform: rotate(180deg);
+	cursor: pointer;
+}
+.slider-arrow_right{
+	position: absolute;
+	right: -10px;
+	top: 57px;
+	cursor: pointer;
 }
 .drive{
 	width: 193px;
@@ -159,7 +403,10 @@ nav ul li.active{
 	background-color: #fff;
 	display: inline-block;
 	float: left;
-	margin: 0 20px;
+	margin: 0 20px 29px;
+  -webkit-box-shadow:  0px 8px 27px -14px #000000;
+  -moz-box-shadow: 0px 8px 27px -14px #000000;
+  box-shadow: 0px 8px 27px -14px #000000;
 }
 .drive-head{
 	background-color: #fb982d;
@@ -168,6 +415,17 @@ nav ul li.active{
 	font-weight: bold;
 	line-height: 42px;
 	color: #fff;
+	vertical-align: middle;
+}
+.drive-head img{
+	vertical-align: middle;
+}
+.cat_1{
+	background-color: #d84076;
+}
+.cat_1 img{
+	vertical-align: middle;
+	padding: 0 11px;
 }
 .drive-body{
 	text-align: center;
@@ -179,6 +437,18 @@ nav ul li.active{
 	display: table-cell;
 	vertical-align: middle;
 }
+.drive-body_middle strong{
+	height: 60px;
+	display: table-cell;
+	vertical-align: middle;
+}
+.drive-body_middle em{
+	color: #676767;
+}
+.drive-body_middle a{
+	color: #676767;
+	font-size: 12px;
+}
 .drive-body em{
 	display: block;
 }
@@ -188,6 +458,9 @@ nav ul li.active{
 .comments{
 	background-color: #fff;
 	padding: 20px;
+  -webkit-box-shadow:  0px 8px 27px -14px #000000;
+  -moz-box-shadow: 0px 8px 27px -14px #000000;
+  box-shadow: 0px 8px 27px -14px #000000;
 }
 .comments-item{
 	margin-bottom: 30px;
@@ -207,6 +480,7 @@ nav ul li.active{
 .comments-item_body h2{
 	margin: 0;
 	padding: 0;
+	margin-top: -5px;
 }
 .comments-item_body h2 a{
 	font-size: 13px;
@@ -232,13 +506,16 @@ nav ul li.active{
 	font-weight: bold;
 	font-size: 13px;
 }
-.webki{
+.webki,
+.trophy{
 	background-color: #fff;
-	padding: 0 29px 29px 29px;
+	padding: 0;
+	margin: 28px 0;
 }
-.webki-head{
+.webki-head,
+.trophy-head{
 	background-color: #66cc00;
-	margin: 29px -29px;
+	margin: 0;
 	padding: 20px 29px 10px 29px;
 }
 .webki-head h1{
@@ -247,25 +524,157 @@ nav ul li.active{
 	font-weight: bold;
 	margin: 0;
 }
-.webki-body_item{
-	width: 50%;
-	
+.webki-body table{
+	width: 100%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.webki-body_item{
+	width: 49%;
+	padding: 19px ;
+	vertical-align: top;
+}
+.webki-body_item > strong{
+	color: #399f1b;
+	font-size: 25px;
+	font-weight: bold;
+	display: block;
+}
+.webki-body_item strong big{
+	font-size: 35px;
+}
+.webki-body_item ul{
+	list-style-image: url(../img/list_item.png);
+	margin: 0;
+	padding: 6px 0 0 16px;
+	line-height: 1.8;
+	font-size: 12px;
+}
+.webki-body_item small{
+	color: #747474;
+	font-size: 12px;
+}
+.webki_atention{
+	margin: 19px 0 7px 0;
+	font-size: 0;
+	width: 130px;
+	height: 1px;
+	border-bottom: 1px solid #bfbfbf;
+}
+.webki-line_v{
+	height: 100%;
+	max-width: 2px;
+	padding: 19px 9px;
+	overflow: hidden;
+}
+.webki-line_v_line{
+	border-right: 1px solid #ccc;
+	height: 100%;
+	font-size: 0;
+	max-width: 1px;
+	margin: 0;
+}
+.webki-line_h{
+	width: 49%;
+	height: 1px;
+	padding: 0 19px;
+}
+.webki-line_h_line{
+	border-bottom: 1px solid #ccc;
+	height: 100%;
+	font-size: 0;
+	width: 100%;
+}
+.webki-line_h_middle{
+	max-width: 1px;
+}
+.ads{
+	background-color: #fff;
+	padding: 25px 29px;
+	width: 100%;
+	margin: 20px 0;
+}
+.ads_body{
+	margin: 16px -5px 0;
+}
+.ads_item,
+.ads_group{
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 5px;
+}
+.ad_3,
+.ad4{
+	display: block;
+}
+.ad_3{
+	margin-bottom: 34px;
+}
+.ads_item > *{
+	display: block;
+	text-align: center;
+	padding-bottom: 16px;
+}
+.ads_item > a{
+	color: #2b7045;
+	font-size: 12px;
+}
+.informs{
+	background-color: #fff;
+	padding: 25px 29px;
+}
+.informs > h1,
+.ads_head > h1{
+	font-size: 16px;
+	font-weight: bold;
+	margin: 0 0 16px 0;
+}
+.informs a{
+	font-size: 12px;
+	color: #2b7045;
+	display: block;
+	margin-top: 15px;
+}
+.trophy-img,
+.trophy-name,
+.trophy-desc{
+	display: inline-block;
+	vertical-align: middle;
+}
+.trophy-img{
+	width: 124px;
+}
+.trophy-name{
+	width: 88px;
+}
+.trophy-desc{
+	max-width: 200px;
+}
+.trophy-footer{
+	padding: 28px 19px 19px 19px;
+}
+.trophy-footer a{
+	font-size: 12px;
+	color: #2b7045;
+}
+footer{
+	margin: 44px 0;
+}
+.footer-spyder{
+	width: 98px;
+	display: inline-block;
+	font-size: 10px;
+	vertical-align: top;
+}
+.footer-spyder img{
+	display: block;
+	margin-bottom: 21px;
+}
+.footer-about{
+	display: inline-block;
+	width: 825px
+}
+.footer-about p{
+	margin: 0 0 17px 0;
+	font-size: 12px;
+	word-wrap: break-word;
+	text-align: justify;
+}
